# ganah

./: .gitignore  README.md  pyproject.toml
ganah/: __init__.py  api.py  base.py  data.py  db.py  registry.py  session.py
ganah/auth/: dashboard.py  flattrade.py  shoonya-fy26.py  shoonya.py
scripts/: init_db.py
