[project]
name = "ganah"
version = "0.1.0"
description = "Multi-broker authentication and API library for Indian stock brokers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=0.8.0",
    "pandas>=1.5.0",
    "pyotp>=2.5.0",
    "NorenRestApiPy>=0.0.22",
    "yfinance>=0.2.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
selenium = ["selenium>=4.10.0"]
streamlit = ["streamlit>=1.28.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ganah*"]
